Fixed: links below header banner now clickable, logo doesn't overlap them anymore.

--- a/dors/dors.css
+++ b/dors/dors.css
@@ -66,7 +66,7 @@ p {text-align:justify; font-size:15px;}
 
 .header {position:absolute:top:50px;}
 .img_main {position:absolute;width:100%;height:600px;left:0px;text-align:center;}
-.main_logo{position:absolute;margin:auto;text-align:center;width:100%;height:100%;top:110px;z-index:98}
+.main_logo{position:absolute;margin:auto;text-align:center;width:100%;top:110px;z-index:98}
 .main_img{display:inline-block;max-width:50%;}
 
 .pos_sponsor {position:absolute;width:570px;height:200px;top:360px;right:50%;margin-right:-300px;opacity:1;z-index:100}
